--- a/project.json
+++ b/project.json
@@ -10,7 +10,13 @@
     "progress": 0,
     "desc_uk": "<strong>Збір на українську локалізацію: інтерфейс, субтитри.</strong>",
     "desc_en": "<strong>Fundraising for a Ukrainian localization.</strong> UI and subtitles.",
-    "cta": { "type": "enable", "label_uk": "Спонсорувати", "label_en": "Sponsor", "url": "https://donatello.to/LittleBitUA", "primary": true },
+    "cta": {
+      "type": "enable",
+      "label_uk": "Спонсорувати",
+      "label_en": "Sponsor",
+      "url": "https://donatello.to/LittleBitUA",
+      "primary": true
+    },
     "steam": "https://store.steampowered.com/app/1235140/Yakuza_Like_a_Dragon/",
     "images_ua": [],
     "videos_ua": [
@@ -23,13 +29,21 @@
     "cover": "assets/MGS2.webp",
     "logo": "assets/MGS2_Logo.webp",
     "status": "fundraising",
-    "platforms": ["Steam"],
+    "platforms": [
+      "Steam"
+    ],
     "raised": 1553,
     "goal": 25000,
     "progress": 0,
     "desc_uk": "Збір на українську локалізацію: інтерфейс, субтитри.",
     "desc_en": "<strong>Iconic stealth‑action classic by Hideo Kojima (Master Collection).</strong> Fundraising for a Ukrainian localization: UI and subtitles.",
-    "cta": { "type": "enable", "label_uk": "Спонсорувати", "label_en": "Sponsor", "url": "https://donatello.to/LittleBitUA", "primary": true },
+    "cta": {
+      "type": "enable",
+      "label_uk": "Спонсорувати",
+      "label_en": "Sponsor",
+      "url": "https://donatello.to/LittleBitUA",
+      "primary": true
+    },
     "steam": "https://store.steampowered.com/app/2131660/METAL_GEAR_SOLID_Master_Collection_Vol1__MGS2Sons_of_Liberty/",
     "images_ua": [],
     "videos_ua": [
@@ -43,12 +57,21 @@
     "logo": "assets/Uncharted_logo.webp",
     "status": "in-progress",
     "progress": 82,
-    "platforms": ["PS3"],
+    "platforms": [
+      "PS3"
+    ],
     "desc_uk": "<strong>Повна українська локалізація.</strong> Інтерфейс і субтитри.",
     "desc_en": "<strong>Full Ukrainian localization.</strong> UI & subtitles.",
-    "cta": { "type": "disabled", "label_uk": "Завантажити", "label_en": "Download", "url": "#" },
+    "cta": {
+      "type": "disabled",
+      "label_uk": "Завантажити",
+      "label_en": "Download",
+      "url": "#"
+    },
     "images_ua": [],
-    "videos_ua": ["https://www.youtube.com/watch?v=3O6n4R-69sc"]
+    "videos_ua": [
+      "https://www.youtube.com/watch?v=3O6n4R-69sc"
+    ]
   },
   {
     "id": "uncharted-2",
@@ -56,13 +79,21 @@
     "cover": "assets/Uncharted2.webp",
     "logo": "assets/Uncharted2_Logo.webp",
     "status": "fundraising",
-    "platforms": ["PS3"],
+    "platforms": [
+      "PS3"
+    ],
     "raised": 0,
     "goal": 8000,
     "progress": 0,
     "desc_uk": "<strong>Збір на українську локалізацію: інтерфейс, субтитри.</strong>",
     "desc_en": "<strong>Fundraising for a Ukrainian localization.</strong> UI and subtitles.",
-    "cta": { "type": "enable", "label_uk": "Спонсорувати", "label_en": "Sponsor", "url": "https://donatello.to/LittleBitUA", "primary": true },
+    "cta": {
+      "type": "enable",
+      "label_uk": "Спонсорувати",
+      "label_en": "Sponsor",
+      "url": "https://donatello.to/LittleBitUA",
+      "primary": true
+    },
     "images_ua": [],
     "videos_ua": []
   },
@@ -72,33 +103,53 @@
     "cover": "assets/barcelona.webp",
     "logo": "assets/barcelona_logo.webp",
     "status": "fundraising",
-    "platforms": ["Steam"],
+    "platforms": [
+      "Steam"
+    ],
     "progress": 50,
     "goal": 5000,
     "raised": 3500,
     "desc_uk": "<strong>Авторський проєкт SWERY та SUDA51.</strong> Починаємо збір на повну українську локалізацію: інтерфейс, субтитри, туторіали.",
     "desc_en": "<strong>Ан auteur project by SWERY and SUDA51.</strong> Fundraising for a full Ukrainian localization: UI, subtitles, tutorials.",
-    "cta": { "type": "enable", "label_uk": "Спонсорувати", "label_en": "Sponsor", "url": "https://donatello.to/LittleBitUA", "primary": true },
+    "cta": {
+      "type": "enable",
+      "label_uk": "Спонсорувати",
+      "label_en": "Sponsor",
+      "url": "https://donatello.to/LittleBitUA",
+      "primary": true
+    },
     "steam": "https://store.steampowered.com/app/2286600/HOTEL_BARCELONA/",
     "images_ua": [],
-    "videos_ua": ["https://www.youtube.com/watch?v=VW4ZfUZ1wI4"]
+    "videos_ua": [
+      "https://www.youtube.com/watch?v=VW4ZfUZ1wI4"
+    ]
   },
   {
     "id": "jojo-asbr",
     "title": "JoJo's Bizarre Adventure: All-Star Battle R",
     "cover": "assets/jojo_asbr.webp",
     "logo": "assets/jojo_asbr_logo.webp",
-    "status": "fundraising",
-    "platforms": ["Steam"],
-    "progress": 90,
+    "status": "in-progress",
+    "platforms": [
+      "Steam"
+    ],
+    "progress": 4,
     "goal": 10000,
     "raised": 8099,
     "desc_uk": "<strong>Легендарні бійці та стенди в арені мрії.</strong> Відкриваємо збір на повну українську локалізацію: інтерфейс, субтитри, туторіали.",
     "desc_en": "<strong>Legendary fighters and Stands in a dream arena.</strong> Fundraising for a full Ukrainian localization: UI, subtitles, tutorials.",
-    "cta": { "type": "enable", "label_uk": "Спонсорувати", "label_en": "Sponsor", "url": "https://donatello.to/LittleBitUA", "primary": true },
+    "cta": {
+      "type": "enable",
+      "label_uk": "Спонсорувати",
+      "label_en": "Sponsor",
+      "url": "https://donatello.to/LittleBitUA",
+      "primary": true
+    },
     "steam": "https://store.steampowered.com/app/1372110/JoJos_Bizarre_Adventure_AllStar_Battle_R/",
     "images_ua": [],
-    "videos_ua": ["https://www.youtube.com/watch?v=MMTx8IkFBXg"]
+    "videos_ua": [
+      "https://www.youtube.com/watch?v=MMTx8IkFBXg"
+    ]
   },
   {
     "id": "judgment",
@@ -107,10 +158,18 @@
     "logo": "assets/judgment_logo.webp",
     "status": "early-access",
     "progress": 89,
-    "platforms": ["Steam"],
+    "platforms": [
+      "Steam"
+    ],
     "desc_uk": "<strong>Неонуарний детективний бойовик від авторів Yakuza.</strong> Повний український переклад: підісторії (побічні завдання), туторіали, інтерфейс та інше.",
     "desc_en": "<strong>Neo-noir detective action from the creators of Yakuza.</strong> Full Ukrainian translation: side cases, tutorials, UI, and more.",
-    "cta": { "type": "link", "label_uk": "Завантажити", "label_en": "Download", "url": "https://donatello.to/post/68de432ff7753d8d33210ca4/ukrayinizator-dlya-judgment-ranniy-dostup-donatello-2-02-10-2025", "animated": true },
+    "cta": {
+      "type": "link",
+      "label_uk": "Завантажити",
+      "label_en": "Download",
+      "url": "https://donatello.to/post/68de432ff7753d8d33210ca4/ukrayinizator-dlya-judgment-ranniy-dostup-donatello-2-02-10-2025",
+      "animated": true
+    },
     "steam": "https://store.steampowered.com/app/2058180/Judgment/",
     "images_ua": [],
     "videos_ua": [
@@ -124,13 +183,22 @@
     "logo": "assets/lost_judgment_logo.webp",
     "status": "in-progress",
     "progress": 6,
-    "platforms": ["Steam"],
+    "platforms": [
+      "Steam"
+    ],
     "desc_uk": "<strong>Продовження неонуарної історії про детектива Яґамі.</strong> Повний український переклад у розробці: сюжет, інтерфейс, субтитри.",
     "desc_en": "<strong>The neo-noir story of detective Yagami continues.</strong> Full Ukrainian translation in progress: story, UI, subtitles.",
-    "cta": { "type": "disabled", "label_uk": "Завантажити", "label_en": "Download", "url": "#" },
+    "cta": {
+      "type": "disabled",
+      "label_uk": "Завантажити",
+      "label_en": "Download",
+      "url": "#"
+    },
     "steam": "https://store.steampowered.com/app/2058180/Lost_Judgment/",
     "images_ua": [],
-    "videos_ua": ["https://www.youtube.com/watch?v=wx2OMw06t58"]
+    "videos_ua": [
+      "https://www.youtube.com/watch?v=wx2OMw06t58"
+    ]
   },
   {
     "id": "ishin",
@@ -139,13 +207,22 @@
     "logo": "assets/Ishin_Logo.webp",
     "status": "in-progress",
     "progress": 15,
-    "platforms": ["Steam"],
+    "platforms": [
+      "Steam"
+    ],
     "desc_uk": "<strong>Наточіть свій меч та приєднуйтесь до революції у цій історичній пригоді.</strong> Повний український переклад у розробці: сюжет, інтерфейс, субтитри.",
     "desc_en": "<strong>Sharpen your blade and join the revolution in this historical adventure.</strong> Full Ukrainian translation in progress: story, UI, subtitles.",
-    "cta": { "type": "disabled", "label_uk": "Завантажити", "label_en": "Download", "url": "#" },
+    "cta": {
+      "type": "disabled",
+      "label_uk": "Завантажити",
+      "label_en": "Download",
+      "url": "#"
+    },
     "steam": "https://store.steampowered.com/app/1805480/Like_a_Dragon_ISHIN/",
     "images_ua": [],
-    "videos_ua": ["https://www.youtube.com/watch?v=eRTaJJn9ldI"]
+    "videos_ua": [
+      "https://www.youtube.com/watch?v=eRTaJJn9ldI"
+    ]
   },
   {
     "id": "yk2",
@@ -154,13 +231,22 @@
     "logo": "assets/yakuza_kiwami2_logo.webp",
     "status": "in-progress",
     "progress": 60,
-    "platforms": ["Steam"],
+    "platforms": [
+      "Steam"
+    ],
     "desc_uk": "<strong>Культовий ремейк на оновленому рушії.</strong> Повний український переклад: підісторії (побічні завдання), туторіали, інтерфейс та інше.",
     "desc_en": "<strong>A cult remake on the upgraded engine.</strong> Full Ukrainian translation: substories, tutorials, UI, and more.",
-    "cta": { "type": "disabled", "label_uk": "Завантажити", "label_en": "Download", "url": "#" },
+    "cta": {
+      "type": "disabled",
+      "label_uk": "Завантажити",
+      "label_en": "Download",
+      "url": "#"
+    },
     "steam": "https://store.steampowered.com/app/927380/Yakuza_Kiwami_2/",
     "images_ua": [],
-    "videos_ua": ["https://www.youtube.com/watch?v=wKe05u8sT_s"]
+    "videos_ua": [
+      "https://www.youtube.com/watch?v=wKe05u8sT_s"
+    ]
   },
   {
     "id": "y3",
@@ -169,13 +255,22 @@
     "logo": "assets/yakuza3_logo.webp",
     "status": "in-progress",
     "progress": 14,
-    "platforms": ["Steam"],
+    "platforms": [
+      "Steam"
+    ],
     "desc_uk": "<strong>Той самий пляжний епізод.</strong> Повний український переклад оригінальної гри та ремейку: підісторії (побічні завдання), туторіали, інтерфейс та інше.",
     "desc_en": "<strong>The iconic beach episode returns.</strong> Full Ukrainian translation: substories, tutorials, UI, and more.",
-    "cta": { "type": "disabled", "label_uk": "Завантажити", "label_en": "Download", "url": "#" },
+    "cta": {
+      "type": "disabled",
+      "label_uk": "Завантажити",
+      "label_en": "Download",
+      "url": "#"
+    },
     "steam": "https://store.steampowered.com/app/1088710/Yakuza_3_Remastered/",
     "images_ua": [],
-    "videos_ua": ["https://www.youtube.com/watch?v=N25iZVyPLeI"]
+    "videos_ua": [
+      "https://www.youtube.com/watch?v=N25iZVyPLeI"
+    ]
   },
   {
     "id": "nmh1",
@@ -184,13 +279,22 @@
     "logo": "assets/no_more_heroes_logo.webp",
     "status": "early-access",
     "progress": 86,
-    "platforms": ["Steam"],
+    "platforms": [
+      "Steam"
+    ],
     "desc_uk": "<strong>Перша та неповторна пригода Тревіса Тачдауна.</strong> Повний український переклад: Сюжет, туторіали, інтерфейс та інше.",
     "desc_en": "<strong>The first, unmatched adventure of Travis Touchdown.</strong> Full Ukrainian translation: story, tutorials, UI, and more.",
-    "cta": { "type": "disabled", "label_uk": "Завантажити", "label_en": "Download", "url": "#" },
+    "cta": {
+      "type": "disabled",
+      "label_uk": "Завантажити",
+      "label_en": "Download",
+      "url": "#"
+    },
     "steam": "https://store.steampowered.com/app/1420290/No_More_Heroes/",
     "images_ua": [],
-    "videos_ua": ["https://www.youtube.com/watch?v=tkDdmZFxWbE"]
+    "videos_ua": [
+      "https://www.youtube.com/watch?v=tkDdmZFxWbE"
+    ]
   },
   {
     "id": "nmh2",
@@ -199,13 +303,23 @@
     "logo": "assets/no_more_heroes2_logo.webp",
     "status": "early-access",
     "progress": 100,
-    "platforms": ["Steam"],
+    "platforms": [
+      "Steam"
+    ],
     "desc_uk": "<strong>Ще більше стилю та боїв!</strong> Повний український переклад: Сюжет, туторіали, інтерфейс та інше.",
     "desc_en": "<strong>Even more style and combat!</strong> Full Ukrainian translation: story, tutorials, UI, and more.",
-    "cta": { "type": "link", "label_uk": "Завантажити", "label_en": "Download", "url": "https://t.me/LittleBitUA/95", "animated": true },
+    "cta": {
+      "type": "link",
+      "label_uk": "Завантажити",
+      "label_en": "Download",
+      "url": "https://t.me/LittleBitUA/95",
+      "animated": true
+    },
     "steam": "https://store.steampowered.com/app/1420300/No_More_Heroes_2_Desperate_Struggle/",
     "images_ua": [],
-    "videos_ua": ["https://www.youtube.com/watch?v=8HGKIRc7MB8"]
+    "videos_ua": [
+      "https://www.youtube.com/watch?v=8HGKIRc7MB8"
+    ]
   },
   {
     "id": "tsa",
@@ -214,13 +328,22 @@
     "logo": "assets/travis_strikes_again_logo.webp",
     "status": "in-progress",
     "progress": 23,
-    "platforms": ["Steam"],
+    "platforms": [
+      "Steam"
+    ],
     "desc_uk": "<strong>Експериментальний спін-оф із метафікційними рівнями й мініжанрами.</strong> Повний український переклад: Сюжет, туторіали, інтерфейс та інше.",
     "desc_en": "<strong>An experimental spin-off with metafictional levels and mini-genres.</strong> Full Ukrainian translation: story, tutorials, UI, and more.",
-    "cta": { "type": "disabled", "label_uk": "Завантажити", "label_en": "Download", "url": "#" },
+    "cta": {
+      "type": "disabled",
+      "label_uk": "Завантажити",
+      "label_en": "Download",
+      "url": "#"
+    },
     "steam": "https://store.steampowered.com/app/1010100/Travis_Strikes_Again_No_More_Heroes_Complete_Edition/",
     "images_ua": [],
-    "videos_ua": ["https://www.youtube.com/watch?v=YP8a4amktGE"]
+    "videos_ua": [
+      "https://www.youtube.com/watch?v=YP8a4amktGE"
+    ]
   },
   {
     "id": "nmh3",
@@ -229,13 +352,24 @@
     "logo": "assets/no_more_heroes3_logo.webp",
     "status": "early-access",
     "progress": 100,
-    "platforms": ["Steam", "Nintendo Switch"],
+    "platforms": [
+      "Steam",
+      "Nintendo Switch"
+    ],
     "desc_uk": "<strong>Надери дупу прибульцям!</strong> Повний український переклад: Сюжет, туторіали, інтерфейс та інше.",
     "desc_en": "<strong>Kick some alien butt!</strong> Full Ukrainian translation: story, tutorials, UI, and more.",
-    "cta": { "type": "link", "label_uk": "Завантажити", "label_en": "Download", "url": "https://t.me/LittleBitUA/95", "animated": true },
+    "cta": {
+      "type": "link",
+      "label_uk": "Завантажити",
+      "label_en": "Download",
+      "url": "https://t.me/LittleBitUA/95",
+      "animated": true
+    },
     "steam": "https://store.steampowered.com/app/1744330/No_More_Heroes_3/",
     "images_ua": [],
-    "videos_ua": ["https://www.youtube.com/watch?v=ZmbOIwUhC24"]
+    "videos_ua": [
+      "https://www.youtube.com/watch?v=ZmbOIwUhC24"
+    ]
   },
   {
     "id": "dp1",
@@ -244,13 +378,23 @@
     "logo": "assets/DP1_Logo.webp",
     "status": "in-progress",
     "progress": 37,
-    "platforms": ["Steam", "Nintendo Switch"],
+    "platforms": [
+      "Steam",
+      "Nintendo Switch"
+    ],
     "desc_uk": "<strong>Культовий містичний трилер із дивакуватим шармом.</strong> Повний український переклад у розробці: сюжет, інтерфейс, субтитри.",
     "desc_en": "<strong>Cult mystery thriller with quirky charm.</strong> Full Ukrainian translation in progress: story, UI, subtitles.",
-    "cta": { "type": "disabled", "label_uk": "Завантажити", "label_en": "Download", "url": "#" },
+    "cta": {
+      "type": "disabled",
+      "label_uk": "Завантажити",
+      "label_en": "Download",
+      "url": "#"
+    },
     "steam": "https://store.steampowered.com/app/247660/Deadly_Premonition_Directors_Cut/",
     "images_ua": [],
-    "videos_ua": ["https://www.youtube.com/watch?v=zIdPzW-H8gI"]
+    "videos_ua": [
+      "https://www.youtube.com/watch?v=zIdPzW-H8gI"
+    ]
   },
   {
     "id": "dp2",
@@ -259,12 +403,39 @@
     "logo": "assets/DP2_Logo.webp",
     "status": "in-progress",
     "progress": 15,
-    "platforms": ["Steam"],
+    "platforms": [
+      "Steam"
+    ],
     "desc_uk": "<strong>Сиквел культового трилера з дивакуватим шармом.</strong> Повний український переклад у розробці: сюжет, інтерфейс, субтитри.",
     "desc_en": "<strong>Sequel to the cult, quirky thriller.</strong> Full Ukrainian translation in progress: story, UI, subtitles.",
-    "cta": { "type": "disabled", "label_uk": "Завантажити", "label_en": "Download", "url": "#" },
+    "cta": {
+      "type": "disabled",
+      "label_uk": "Завантажити",
+      "label_en": "Download",
+      "url": "#"
+    },
     "steam": "https://store.steampowered.com/app/1271100/Deadly_Premonition_2_A_Blessing_in_Disguise/",
     "images_ua": [],
-    "videos_ua": ["https://www.youtube.com/watch?v=66F3TanyZzI"]
+    "videos_ua": [
+      "https://www.youtube.com/watch?v=66F3TanyZzI"
+    ]
+  },
+  {
+    "id": "dispatch",
+    "title": "Dispatch",
+    "cover": "assets/Dispatch.webp",
+    "logo": "assets/Dispatch_logo.webp",
+    "status": "in-progress",
+    "progress": 0,
+    "desc_uk": "<strong>Українська локалізація (епізодична гра).</strong> Інтерфейс і субтитри.",
+    "desc_en": "<strong>Ukrainian localization (episodic game).</strong> UI & subtitles.",
+    "cta": {
+      "type": "disabled",
+      "label_uk": "Завантажити",
+      "label_en": "Download",
+      "url": "#"
+    },
+    "images_ua": [],
+    "videos_ua": []
   }
 ]
