--- a/project.json
+++ b/project.json
@@ -423,8 +423,8 @@
     "cover": "assets/Dispatch.webp",
     "logo": "assets/Dispatch_logo.webp",
     "status": "in-progress",
-    "progress": 0,
-    "desc_uk": "<strong>Українська локалізація (епізодична гра).</strong> Інтерфейс і субтитри.",
+    "progress": 10,
+    "desc_uk": "<strong>Українська локалізація першого епізоду.</strong> Інтерфейс і субтитри.",
     "desc_en": "<strong>Ukrainian localization (episodic game).</strong> UI & subtitles.",
     "cta": {
       "type": "disabled",
