--- a/project.json
+++ b/project.json
@@ -5,7 +5,10 @@
     "cover": "assets/Dispatch.webp",
     "logo": "assets/Dispatch_logo.webp",
     "status": "in-progress",
-    "progress": 65,
+    "progress": 38,
+    "progress_text": 85,
+    "progress_textures": 0,
+    "progress_fonts": 50,
     "desc_uk": "<strong>Українська локалізація першого епізоду.</strong> Інтерфейс і субтитри.",
     "desc_en": "<strong>Ukrainian localization (episodic game).</strong> UI & subtitles.",
     "cta": {
@@ -15,10 +18,7 @@
       "url": "#"
     },
     "images_ua": [],
-    "videos_ua": [],
-    "progress_text": 80,
-    "progress_textures": 0,
-    "progress_fonts": 10
+    "videos_ua": []
   },
   {
     "id": "lad",
@@ -29,6 +29,9 @@
     "raised": 75,
     "goal": 35000,
     "progress": 0,
+    "progress_text": 15,
+    "progress_textures": 30,
+    "progress_fonts": 50,
     "desc_uk": "<strong>Збір на українську локалізацію: інтерфейс, субтитри.</strong>",
     "desc_en": "<strong>Fundraising for a Ukrainian localization.</strong> UI and subtitles.",
     "cta": {
@@ -42,10 +45,7 @@
     "images_ua": [],
     "videos_ua": [
       "https://www.youtube.com/watch?v=dhObkWG-goU"
-    ],
-    "progress_text": 15,
-    "progress_textures": 25,
-    "progress_fonts": 50
+    ]
   },
   {
     "id": "mgs2",
@@ -59,6 +59,9 @@
     "raised": 1553,
     "goal": 25000,
     "progress": 0,
+    "progress_text": 2,
+    "progress_textures": 0,
+    "progress_fonts": 100,
     "desc_uk": "Збір на українську локалізацію: інтерфейс, субтитри.",
     "desc_en": "<strong>Iconic stealth‑action classic by Hideo Kojima (Master Collection).</strong> Fundraising for a Ukrainian localization: UI and subtitles.",
     "cta": {
@@ -72,10 +75,7 @@
     "images_ua": [],
     "videos_ua": [
       "https://www.youtube.com/watch?v=14EBz2UG1vI"
-    ],
-    "progress_text": 3,
-    "progress_textures": 0,
-    "progress_fonts": 10
+    ]
   },
   {
     "id": "uncharted-df",
@@ -84,6 +84,9 @@
     "logo": "assets/Uncharted_logo.webp",
     "status": "in-progress",
     "progress": 82,
+    "progress_text": 82,
+    "progress_textures": 0,
+    "progress_fonts": 100,
     "platforms": [
       "PS3"
     ],
@@ -98,10 +101,7 @@
     "images_ua": [],
     "videos_ua": [
       "https://www.youtube.com/watch?v=3O6n4R-69sc"
-    ],
-    "progress_text": 82,
-    "progress_textures": 0,
-    "progress_fonts": 100
+    ]
   },
   {
     "id": "uncharted-2",
@@ -115,6 +115,9 @@
     "raised": 0,
     "goal": 8000,
     "progress": 0,
+    "progress_text": 2,
+    "progress_textures": 0,
+    "progress_fonts": 100,
     "desc_uk": "<strong>Збір на українську локалізацію: інтерфейс, субтитри.</strong>",
     "desc_en": "<strong>Fundraising for a Ukrainian localization.</strong> UI and subtitles.",
     "cta": {
@@ -125,10 +128,7 @@
       "primary": true
     },
     "images_ua": [],
-    "videos_ua": [],
-    "progress_text": 0,
-    "progress_textures": 0,
-    "progress_fonts": 100
+    "videos_ua": []
   },
   {
     "id": "hotel-barcelona",
@@ -140,10 +140,13 @@
       "Steam"
     ],
     "progress": 50,
+    "progress_text": 50,
+    "progress_textures": 0,
+    "progress_fonts": 70,
     "goal": 5000,
     "raised": 3500,
     "desc_uk": "<strong>Авторський проєкт SWERY та SUDA51.</strong> Починаємо збір на повну українську локалізацію: інтерфейс, субтитри, туторіали.",
-    "desc_en": "<strong>An auteur project by SWERY and SUDA51.</strong> Fundraising for a full Ukrainian localization: UI, subtitles, tutorials.",
+    "desc_en": "<strong>Ан auteur project by SWERY and SUDA51.</strong> Fundraising for a full Ukrainian localization: UI, subtitles, tutorials.",
     "cta": {
       "type": "enable",
       "label_uk": "Спонсорувати",
@@ -155,10 +158,7 @@
     "images_ua": [],
     "videos_ua": [
       "https://www.youtube.com/watch?v=VW4ZfUZ1wI4"
-    ],
-    "progress_text": 50,
-    "progress_textures": 0,
-    "progress_fonts": 80
+    ]
   },
   {
     "id": "jojo-asbr",
@@ -170,6 +170,9 @@
       "Steam"
     ],
     "progress": 4,
+    "progress_text": 4,
+    "progress_textures": 0,
+    "progress_fonts": 100,
     "desc_uk": "<strong>Повна українська локалізація.</strong> Інтерфейс і субтитри.",
     "desc_en": "<strong>Full Ukrainian localization.</strong> UI & subtitles.",
     "cta": {
@@ -182,10 +185,7 @@
     "images_ua": [],
     "videos_ua": [
       "https://www.youtube.com/watch?v=MMTx8IkFBXg"
-    ],
-    "progress_text": 4,
-    "progress_textures": 0,
-    "progress_fonts": 100
+    ]
   },
   {
     "id": "judgment",
@@ -194,6 +194,9 @@
     "logo": "assets/judgment_logo.webp",
     "status": "early-access",
     "progress": 89,
+    "progress_text": 89,
+    "progress_textures": 50,
+    "progress_fonts": 100,
     "platforms": [
       "Steam"
     ],
@@ -210,10 +213,7 @@
     "images_ua": [],
     "videos_ua": [
       "https://www.youtube.com/watch?v=8cnFlWRILKY"
-    ],
-    "progress_text": 89,
-    "progress_textures": 50,
-    "progress_fonts": 100
+    ]
   },
   {
     "id": "lost-judgment",
@@ -222,6 +222,9 @@
     "logo": "assets/lost_judgment_logo.webp",
     "status": "in-progress",
     "progress": 6,
+    "progress_text": 6,
+    "progress_textures": 0,
+    "progress_fonts": 60,
     "platforms": [
       "Steam"
     ],
@@ -237,10 +240,7 @@
     "images_ua": [],
     "videos_ua": [
       "https://www.youtube.com/watch?v=wx2OMw06t58"
-    ],
-    "progress_text": 6,
-    "progress_textures": 0,
-    "progress_fonts": 60
+    ]
   },
   {
     "id": "ishin",
@@ -249,6 +249,9 @@
     "logo": "assets/Ishin_Logo.webp",
     "status": "in-progress",
     "progress": 15,
+    "progress_text": 15,
+    "progress_textures": 0,
+    "progress_fonts": 60,
     "platforms": [
       "Steam"
     ],
@@ -264,10 +267,7 @@
     "images_ua": [],
     "videos_ua": [
       "https://www.youtube.com/watch?v=eRTaJJn9ldI"
-    ],
-    "progress_text": 15,
-    "progress_textures": 0,
-    "progress_fonts": 40
+    ]
   },
   {
     "id": "yk2",
@@ -276,6 +276,9 @@
     "logo": "assets/yakuza_kiwami2_logo.webp",
     "status": "in-progress",
     "progress": 60,
+    "progress_text": 60,
+    "progress_textures": 30,
+    "progress_fonts": 100,
     "platforms": [
       "Steam"
     ],
@@ -291,10 +294,7 @@
     "images_ua": [],
     "videos_ua": [
       "https://www.youtube.com/watch?v=wKe05u8sT_s"
-    ],
-    "progress_text": 60,
-    "progress_textures": 30,
-    "progress_fonts": 100
+    ]
   },
   {
     "id": "y3",
@@ -303,6 +303,9 @@
     "logo": "assets/yakuza3_logo.webp",
     "status": "in-progress",
     "progress": 14,
+    "progress_text": 14,
+    "progress_textures": 0,
+    "progress_fonts": 100,
     "platforms": [
       "Steam"
     ],
@@ -318,10 +321,7 @@
     "images_ua": [],
     "videos_ua": [
       "https://www.youtube.com/watch?v=N25iZVyPLeI"
-    ],
-    "progress_text": 14,
-    "progress_textures": 0,
-    "progress_fonts": 100
+    ]
   },
   {
     "id": "nmh1",
@@ -330,6 +330,9 @@
     "logo": "assets/no_more_heroes_logo.webp",
     "status": "early-access",
     "progress": 86,
+    "progress_text": 86,
+    "progress_textures": 50,
+    "progress_fonts": 90,
     "platforms": [
       "Steam"
     ],
@@ -345,10 +348,7 @@
     "images_ua": [],
     "videos_ua": [
       "https://www.youtube.com/watch?v=tkDdmZFxWbE"
-    ],
-    "progress_text": 86,
-    "progress_textures": 50,
-    "progress_fonts": 86
+    ]
   },
   {
     "id": "nmh2",
@@ -357,6 +357,9 @@
     "logo": "assets/no_more_heroes2_logo.webp",
     "status": "early-access",
     "progress": 100,
+    "progress_text": 100,
+    "progress_textures": 40,
+    "progress_fonts": 100,
     "platforms": [
       "Steam"
     ],
@@ -373,10 +376,7 @@
     "images_ua": [],
     "videos_ua": [
       "https://www.youtube.com/watch?v=8HGKIRc7MB8"
-    ],
-    "progress_text": 100,
-    "progress_textures": 50,
-    "progress_fonts": 100
+    ]
   },
   {
     "id": "tsa",
@@ -385,6 +385,9 @@
     "logo": "assets/travis_strikes_again_logo.webp",
     "status": "in-progress",
     "progress": 23,
+    "progress_text": 23,
+    "progress_textures": 0,
+    "progress_fonts": 100,
     "platforms": [
       "Steam"
     ],
@@ -400,10 +403,7 @@
     "images_ua": [],
     "videos_ua": [
       "https://www.youtube.com/watch?v=YP8a4amktGE"
-    ],
-    "progress_text": 23,
-    "progress_textures": 0,
-    "progress_fonts": 100
+    ]
   },
   {
     "id": "nmh3",
@@ -412,6 +412,9 @@
     "logo": "assets/no_more_heroes3_logo.webp",
     "status": "early-access",
     "progress": 100,
+    "progress_text": 100,
+    "progress_textures": 60,
+    "progress_fonts": 100,
     "platforms": [
       "Steam",
       "Nintendo Switch"
@@ -429,10 +432,7 @@
     "images_ua": [],
     "videos_ua": [
       "https://www.youtube.com/watch?v=ZmbOIwUhC24"
-    ],
-    "progress_text": 100,
-    "progress_textures": 50,
-    "progress_fonts": 100
+    ]
   },
   {
     "id": "dp1",
@@ -441,6 +441,9 @@
     "logo": "assets/DP1_Logo.webp",
     "status": "in-progress",
     "progress": 37,
+    "progress_text": 37,
+    "progress_textures": 0,
+    "progress_fonts": 100,
     "platforms": [
       "Steam",
       "Nintendo Switch"
@@ -457,10 +460,7 @@
     "images_ua": [],
     "videos_ua": [
       "https://www.youtube.com/watch?v=zIdPzW-H8gI"
-    ],
-    "progress_text": 37,
-    "progress_textures": 0,
-    "progress_fonts": 80
+    ]
   },
   {
     "id": "dp2",
@@ -469,6 +469,9 @@
     "logo": "assets/DP2_Logo.webp",
     "status": "in-progress",
     "progress": 15,
+    "progress_text": 15,
+    "progress_textures": 0,
+    "progress_fonts": 100,
     "platforms": [
       "Steam"
     ],
@@ -484,9 +487,6 @@
     "images_ua": [],
     "videos_ua": [
       "https://www.youtube.com/watch?v=66F3TanyZzI"
-    ],
-    "progress_text": 15,
-    "progress_textures": 0,
-    "progress_fonts": 100
+    ]
   }
 ]
