Add video URL to project.json

--- a/project.json
+++ b/project.json
@@ -18,7 +18,9 @@
       "url": "#"
     },
     "images_ua": [],
-    "videos_ua": []
+    "videos_ua": [
+      "https://www.youtube.com/watch?v=JnsQQNCTCPs"
+    ]
   },
   {
     "id": "lad",
