--- a/project.json
+++ b/project.json
@@ -20,7 +20,11 @@
     "images_ua": [],
     "videos_ua": [
       "https://www.youtube.com/watch?v=JnsQQNCTCPs"
-    ]
+    ],
+    "progress_ep1": 100,
+    "progress_ep2": 0,
+    "progress_ep3": 0,
+    "progress_mode": "episodes"
   },
   {
     "id": "lad",
