--- a/project.json
+++ b/project.json
@@ -21,10 +21,10 @@
     "videos_ua": [
       "https://www.youtube.com/watch?v=JnsQQNCTCPs"
     ],
+    "progress_mode": "episodes",
     "progress_ep1": 100,
     "progress_ep2": 0,
-    "progress_ep3": 0,
-    "progress_mode": "episodes"
+    "progress_ep3": 0
   },
   {
     "id": "lad",
