--- a/project.json
+++ b/project.json
@@ -181,8 +181,8 @@
     "progress_text": 5,
     "progress_textures": 0,
     "progress_fonts": 100,
-    "desc_uk": "<strong>Повна українська локалізація.</strong> Інтерфейс і субтитри.",
-    "desc_en": "<strong>Full Ukrainian localization.</strong> UI & subtitles.",
+    "desc_uk": "<strong>Повна текстова українська локалізація.</strong> Інтерфейс і субтитри.",
+    "desc_en": "<strong>Ukrainian localization.</strong> UI & subtitles.",
     "cta": {
       "type": "disabled",
       "label_uk": "Завантажити",
