--- a/project.json
+++ b/project.json
@@ -208,7 +208,7 @@
     "platforms": [
       "Steam"
     ],
-    "desc_uk": "<strong>Неонуарний детективний бойовик від авторів Yakuza.</strong> Повний український переклад: підісторії (побічні завдання), туторіали, інтерфейс та інше.",
+    "desc_uk": "<strong>Неонуарний детективний бойовик від авторів Yakuza.</strong> Повний текстовий український переклад: підісторії (побічні завдання), туторіали, інтерфейс та інше.",
     "desc_en": "<strong>Neo-noir detective action from the creators of Yakuza.</strong> Full Ukrainian translation: side cases, tutorials, UI, and more.",
     "cta": {
       "type": "link",
@@ -236,7 +236,7 @@
     "platforms": [
       "Steam"
     ],
-    "desc_uk": "<strong>Продовження неонуарної історії про детектива Яґамі.</strong> Повний український переклад у розробці: сюжет, інтерфейс, субтитри.",
+    "desc_uk": "<strong>Продовження неонуарної історії про детектива Яґамі.</strong> Повний текстовий український переклад у розробці: сюжет, інтерфейс, субтитри.",
     "desc_en": "<strong>The neo-noir story of detective Yagami continues.</strong> Full Ukrainian translation in progress: story, UI, subtitles.",
     "cta": {
       "type": "disabled",
@@ -263,7 +263,7 @@
     "platforms": [
       "Steam"
     ],
-    "desc_uk": "<strong>Наточіть свій меч та приєднуйтесь до революції у цій історичній пригоді.</strong> Повний український переклад у розробці: сюжет, інтерфейс, субтитри.",
+    "desc_uk": "<strong>Наточіть свій меч та приєднуйтесь до революції у цій історичній пригоді.</strong> Повний текстовий український переклад у розробці: сюжет, інтерфейс, субтитри.",
     "desc_en": "<strong>Sharpen your blade and join the revolution in this historical adventure.</strong> Full Ukrainian translation in progress: story, UI, subtitles.",
     "cta": {
       "type": "disabled",
@@ -317,7 +317,7 @@
     "platforms": [
       "Steam"
     ],
-    "desc_uk": "<strong>Той самий пляжний епізод.</strong> Повний український переклад оригінальної гри та ремейку: підісторії (побічні завдання), туторіали, інтерфейс та інше.",
+    "desc_uk": "<strong>Той самий пляжний епізод.</strong> Повний текстовий український переклад оригінальної гри та ремейку: підісторії (побічні завдання), туторіали, інтерфейс та інше.",
     "desc_en": "<strong>The iconic beach episode returns.</strong> Full Ukrainian translation: substories, tutorials, UI, and more.",
     "cta": {
       "type": "disabled",
@@ -344,7 +344,7 @@
     "platforms": [
       "Steam"
     ],
-    "desc_uk": "<strong>Перша та неповторна пригода Тревіса Тачдауна.</strong> Повний український переклад: Сюжет, туторіали, інтерфейс та інше.",
+    "desc_uk": "<strong>Перша та неповторна пригода Тревіса Тачдауна.</strong> Повний текстовий український переклад: Сюжет, туторіали, інтерфейс та інше.",
     "desc_en": "<strong>The first, unmatched adventure of Travis Touchdown.</strong> Full Ukrainian translation: story, tutorials, UI, and more.",
     "cta": {
       "type": "disabled",
@@ -371,7 +371,7 @@
     "platforms": [
       "Steam"
     ],
-    "desc_uk": "<strong>Ще більше стилю та боїв!</strong> Повний український переклад: Сюжет, туторіали, інтерфейс та інше.",
+    "desc_uk": "<strong>Ще більше стилю та боїв!</strong> Повний текстовий український переклад: Сюжет, туторіали, інтерфейс та інше.",
     "desc_en": "<strong>Even more style and combat!</strong> Full Ukrainian translation: story, tutorials, UI, and more.",
     "cta": {
       "type": "link",
@@ -399,7 +399,7 @@
     "platforms": [
       "Steam"
     ],
-    "desc_uk": "<strong>Експериментальний спін-оф із метафікційними рівнями й мініжанрами.</strong> Повний український переклад: Сюжет, туторіали, інтерфейс та інше.",
+    "desc_uk": "<strong>Експериментальний спін-оф із метафікційними рівнями й мініжанрами.</strong> Повний текстовий український переклад: Сюжет, туторіали, інтерфейс та інше.",
     "desc_en": "<strong>An experimental spin-off with metafictional levels and mini-genres.</strong> Full Ukrainian translation: story, tutorials, UI, and more.",
     "cta": {
       "type": "disabled",
@@ -427,7 +427,7 @@
       "Steam",
       "Nintendo Switch"
     ],
-    "desc_uk": "<strong>Надери дупу прибульцям!</strong> Повний український переклад: Сюжет, туторіали, інтерфейс та інше.",
+    "desc_uk": "<strong>Надери дупу прибульцям!</strong> Повний текстовий український переклад: Сюжет, туторіали, інтерфейс та інше.",
     "desc_en": "<strong>Kick some alien butt!</strong> Full Ukrainian translation: story, tutorials, UI, and more.",
     "cta": {
       "type": "link",
@@ -456,7 +456,7 @@
       "Steam",
       "Nintendo Switch"
     ],
-    "desc_uk": "<strong>Культовий містичний трилер із дивакуватим шармом.</strong> Повний український переклад у розробці: сюжет, інтерфейс, субтитри.",
+    "desc_uk": "<strong>Культовий містичний трилер із дивакуватим шармом.</strong> Повний текстовий український переклад у розробці: сюжет, інтерфейс, субтитри.",
     "desc_en": "<strong>Cult mystery thriller with quirky charm.</strong> Full Ukrainian translation in progress: story, UI, subtitles.",
     "cta": {
       "type": "disabled",
@@ -483,7 +483,7 @@
     "platforms": [
       "Steam"
     ],
-    "desc_uk": "<strong>Сиквел культового трилера з дивакуватим шармом.</strong> Повний український переклад у розробці: сюжет, інтерфейс, субтитри.",
+    "desc_uk": "<strong>Сиквел культового трилера з дивакуватим шармом.</strong> Повний текстовий український переклад у розробці: сюжет, інтерфейс, субтитри.",
     "desc_en": "<strong>Sequel to the cult, quirky thriller.</strong> Full Ukrainian translation in progress: story, UI, subtitles.",
     "cta": {
       "type": "disabled",
