--- a/project.json
+++ b/project.json
@@ -1,5 +1,26 @@
 [
   {
+    "id": "nier-replicant",
+    "title": "NieR Replicant ver.1.22474487139",
+    "cover": "assets/nier_replicant.webp",
+    "logo": "assets/nier_replicant_logo.webp",
+    "status": "in-progress",
+    "progress": 0,
+    "progress_text": 0,
+    "progress_textures": 0,
+    "progress_fonts": 0,
+    "desc_uk": "<strong>Плануємо повну українську локалізацію.</strong> Інтерфейс і субтитри.",
+    "desc_en": "<strong>Ukrainian localization in progress.</strong> UI & subtitles.",
+    "cta": {
+      "type": "disabled",
+      "label_uk": "Завантажити",
+      "label_en": "Download",
+      "url": "#"
+    },
+    "images_ua": [],
+    "videos_ua": []
+  },
+  {
     "id": "dispatch",
     "title": "Dispatch",
     "cover": "assets/Dispatch.webp",
