--- a/project.json
+++ b/project.json
@@ -114,7 +114,7 @@
     "title": "Uncharted: Drake's Fortune",
     "cover": "assets/Uncharted.webp",
     "logo": "assets/Uncharted_logo.webp",
-    "status": "in-progress",
+    "status": "early-access",
     "progress": 82,
     "progress_text": 86,
     "progress_textures": 0,
